[package]
name = "timest"
version = "0.1.0"
authors = ["Stephen Funk"]
edition = "2021"
description = "Dead simple timesheet/punch card/clock report CLI. Clock in. Clock out. See time worked."
repository = "https://github.com/stephenlf/timest"
license = "MIT"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
microxdg = "0.1.0"
ntp = "0.5.0"
recolored = "1.9.3"
sqlite = "0.32.0"

[[bin]]
name = "timest"